--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "ts-xlsx-export": "^1.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
